--- a/README.textile
+++ b/README.textile
@@ -4,6 +4,15 @@ Implementação do algoritmo Metaphone para Português (focado principalmente em
 
 Baseado "no trabalho da Prefeitura de Várzea Paulista":http://www2.varzeapaulista.sp.gov.br/metaphone e no código de Carlos Costa Jordão. (Veja o código fonte da classe "MetaphonePtBr" para os COPYRIGHTS originais).
 
+h2. Novidades
+
+*2009-10-08* Implementado  MetaphonePtBr mais frouxo.
+ O algoritmo foca apenas nos fonemas que mais se destacam nas palavras e faz várias concessões sobre a pronúncia. A ideia é diminuir a precisão para facilitar a pesquisa.
+ O próximo passo é implementar uma variação do Double Metaphone, mas usando o Metaphone Frouxo e o Metaphone normal para classificar a proximidade das palavras (palavras que batem no metaphone frouxo e normal são preferênciais as que batam apenas com o metaphone frouxo).
+ 
+ *2009-10-08* Pequeno analisador para agrupar as palavras pelos fonemas.
+ Por enquanto é apenas um utilitário útil. A itenção é tentar deixar ele um pouco mais esperto para destacar "ponto fora da curva"
+
 h2. Para que serve?
 
 O algoritmo cria uma "chave" baseada na pronúncia mais provável do nome. Essa chave pode ser usada principalmente em pesquisas no banco de dados. Dessa forma, a pesquisa passa a achar nomes que são fonéticamente parecidos ao invés de somente parecidos na escrita.
